ses modernization (migrate to new spring, add taskId, add more tests, and more...)